@@ -1,6 +1,12 @@
 2016-01-21  Aditya Kumar  <aditya.k7@samsung.com>
 	    Sebastian Pop  <s.pop@samsung.com>
 
+	* graphite-isl-ast-to-gimple.c (translate_isl_ast): Also handle
+	isl_ast_node_mark.
+
+2016-01-21  Aditya Kumar  <aditya.k7@samsung.com>
+	    Sebastian Pop  <s.pop@samsung.com>
+
 	* graphite-poly.c (new_poly_bb): Remove use of PBB_IS_REDUCTION.
 	* graphite.h (struct poly_bb): Remove field is_reduction.
         (PBB_IS_REDUCTION): Remove.
